# CmakeStm32Template

./: .clang-format  CMakeLists.txt  CMakePresets.json  Makefile
.devcontainer/: devcontainer.json  set-host-ip.sh
.github/workflows/: ci.yml
cmake/: gcc-arm-none-eabi.cmake  gcc-arm.cmake  options.cmake  stm32g4.cmake
cmake/clang-tools/: clang-format.cmake
cmake/googletest/: common.cmake
src/: CMakeLists.txt
src/app/: App.cpp  App.h  CMakeLists.txt  led.h
src/bsp/Stm32G4/: .mxproject  CMakeLists.txt  Makefile  Stm32G4.ioc
src/bsp/Stm32G4/Core/Src/: gpio.c  main.c
src/bsp/Stm32G4/ImplementedInterfaces/: stm32_led.h
src/configured/: CMakeLists.txt
tests/: CMakeLists.txt  MyFirstTest.cpp
tools/: run-clang-format.py
